fix: footer gap

--- a/styles/index.css
+++ b/styles/index.css
@@ -206,6 +206,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
 }
 .footer {
   display: flex;
